# ride-service-v2

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
src/: config.py  main.py
src/application/: dto.py
src/application/ports/: ride_repository_port.py
src/application/use_cases/: complete_ride.py  create_ride.py  join_ride.py  list_rides.py
src/domain/: entities.py
src/infrastructure/db/: models.py  session.py
src/infrastructure/repositories/: ride_sqlalchemy_repository.py
src/interface/api/: dependencies.py  ride_router.py  schemas.py
